@@ -3,6 +3,10 @@ Version 1.4:
 Core changes:
 - added bilinear and bilinear plus filters
 - added interframe blending support
+- fixed crash when loading a second ELF file
+
+Windows version:
+- fixed tile viewer to display all tiles in 256 mode
 
 Version 1.3.1:
 
